--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
@@ -66,6 +66,9 @@
           <h2 class="benefits visually-hidden">benefits</h2>
           <ul class="main-benefits">
             <li class="main-benefits-list">
+              <svg class="" width="64px" height="64px">
+                <use href="./SVG/icons.svg.svg#icon-antenna"></use>
+              </svg>
               <h3 class="benefits-item">Strategy</h3>
               <p class="benefits-description">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +76,9 @@
               </p>
             </li>
             <li class="main-benefits-list">
+              <svg class="" width="64px" height="64px">
+                <use href="./SVG/icons.svg.svg#icon-clock"></use>
+              </svg>
               <h3 class="benefits-item">Punctuality</h3>
               <p class="benefits-description">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +86,9 @@
               </p>
             </li>
             <li class="main-benefits-list">
+              <svg class="" width="64px" height="64px">
+                <use href="./SVG/icons.svg.svg#icon-diagram"></use>
+              </svg>
               <h3 class="benefits-item">Diligence</h3>
               <p class="benefits-description">
                 Research and confirm brands with the strongest digital growth
@@ -87,6 +96,9 @@
               </p>
             </li>
             <li class="main-benefits-list">
+              <svg class="" width="64px" height="64px">
+                <use href="./SVG/icons.svg.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="benefits-item">Technologies</h3>
               <p class="benefits-description">
                 Design practice focused on digital experiences. We bring forth a
