--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
           <h2 class="benefits visually-hidden">benefits</h2>
           <ul class="main-benefits">
             <li class="main-benefits-list">
-              <svg class="" width="64px" height="64px">
-                <use href="./SVG/icons.svg.svg#icon-antenna"></use>
-              </svg>
+              <div class="container-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./SVG/icons.svg.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item">Strategy</h3>
               <p class="benefits-description">
                 Our goal is to identify the business problem to walk away with
@@ -76,9 +78,11 @@
               </p>
             </li>
             <li class="main-benefits-list">
-              <svg class="" width="64px" height="64px">
-                <use href="./SVG/icons.svg.svg#icon-clock"></use>
-              </svg>
+              <div class="container-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./SVG/icons.svg.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item">Punctuality</h3>
               <p class="benefits-description">
                 Bring the key message to the brand's audience for the best price
@@ -86,9 +90,11 @@
               </p>
             </li>
             <li class="main-benefits-list">
-              <svg class="" width="64px" height="64px">
-                <use href="./SVG/icons.svg.svg#icon-diagram"></use>
-              </svg>
+              <div class="container-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./SVG/icons.svg.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item">Diligence</h3>
               <p class="benefits-description">
                 Research and confirm brands with the strongest digital growth
@@ -96,9 +102,11 @@
               </p>
             </li>
             <li class="main-benefits-list">
-              <svg class="" width="64px" height="64px">
-                <use href="./SVG/icons.svg.svg#icon-astronaut"></use>
-              </svg>
+              <div class="container-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./SVG/icons.svg.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item">Technologies</h3>
               <p class="benefits-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -124,6 +132,36 @@
               <div class="team-item-info">
                 <h3 class="team-header">Mark Guerrero</h3>
                 <p class="team-members">Product Designer</p>
+                <ul class="social-media">
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -138,6 +176,36 @@
               <div class="team-item-info">
                 <h3 class="team-header">Tom Ford</h3>
                 <p class="team-members">Frontend Developer</p>
+                <ul class="social-media">
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-card">
@@ -151,6 +219,36 @@
               <div class="team-item-info">
                 <h3 class="team-header">Camila Garcia</h3>
                 <p class="team-members">Marketing</p>
+                <ul class="social-media">
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -165,6 +263,36 @@
               <div class="team-item-info">
                 <h3 class="team-header">Daniel Wilson</h3>
                 <p class="team-members">UI Designer</p>
+                <ul class="social-media">
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-icons">
+                    <a class="social-link" href="">
+                      <svg class="social" width="16px" height="16px">
+                        <use href="./SVG/icons.svg.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -189,12 +317,19 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-2.jpg"
-                width="360"
-                height="300"
-                alt="Cashless Payment"
-              />
+              <div class="container-image">
+                <img
+                  src="./images/portfolio-2.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless Payment"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-item">Cashless Payment</h3>
                 <p class="portfolio-description">Marketing</p>
