--- a/index.html
+++ b/index.html
@@ -317,18 +317,16 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div class="container-image">
-                <img
-                  src="./images/portfolio-2.jpg"
-                  width="360"
-                  height="300"
-                  alt="Cashless Payment"
-                />
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
+              <img
+                src="./images/portfolio-2.jpg"
+                width="360"
+                height="300"
+                alt="Cashless Payment"
+              />
+              <div class="overlay-image">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-item">Cashless Payment</h3>
