--- a/index.html
+++ b/index.html
@@ -304,29 +304,38 @@
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-image"
-                src="./images/portfolio-1.jpg"
-                width="360"
-                height="300"
-                alt="Banking App"
-              />
+              <div class="container-img">
+                <img
+                  class="portfolio-image"
+                  src="./images/portfolio-1.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <p class="overlay-image">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-item">Banking App</h3>
                 <p class="portfolio-description">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-2.jpg"
-                width="360"
-                height="300"
-                alt="Cashless Payment"
-              />
-              <div class="overlay-image">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="container-img">
+                <img
+                  src="./images/portfolio-2.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless Payment"
+                />
+                <p class="overlay-image">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-item">Cashless Payment</h3>
@@ -334,48 +343,76 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-3.jpg"
-                width="360"
-                height="300"
-                alt="Meditation App"
-              />
+              <div class="container-img">
+                <img
+                  src="./images/portfolio-3.jpg"
+                  width="360"
+                  height="300"
+                  alt="Meditation App"
+                />
+                <p class="overlay-image">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-item">Meditation App</h3>
                 <p class="portfolio-description">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-4.jpg"
-                width="360"
-                height="300"
-                alt="Taxi Service"
-              />
+              <div class="container-img">
+                <img
+                  src="./images/portfolio-4.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi Service"
+                />
+                <p class="overlay-image">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-item">Taxi Service</h3>
                 <p class="portfolio-description">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-5.jpg"
-                width="360"
-                height="300"
-                alt="Screen Illustrations"
-              />
+              <div class="container-img">
+                <img
+                  src="./images/portfolio-5.jpg"
+                  width="360"
+                  height="300"
+                  alt="Screen Illustrations"
+                />
+                <p class="overlay-image">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-item">Screen Illustrations</h3>
                 <p class="portfolio-description">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-6.jpg"
-                width="360"
-                height="300"
-                alt="Online Courses"
-              />
+              <div class="container-img">
+                <img
+                  src="./images/portfolio-6.jpg"
+                  width="360"
+                  height="300"
+                  alt="Online Courses"
+                />
+                <p class="overlay-image">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-item">Online Courses</h3>
                 <p class="portfolio-description">Marketing</p>
@@ -386,14 +423,49 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-block">
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-container-media">
+          <p class="footer-social-media">Social media</p>
+          <ul class="social-media">
+            <li class="social-media-icons">
+              <a class="footer-social-link" href="">
+                <svg class="social" width="16px" height="16px">
+                  <use href="./SVG/icons.svg.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-icons">
+              <a class="footer-social-link" href="">
+                <svg class="social" width="16px" height="16px">
+                  <use href="./SVG/icons.svg.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-icons">
+              <a class="footer-social-link" href="">
+                <svg class="social" width="16px" height="16px">
+                  <use href="./SVG/icons.svg.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-icons">
+              <a class="footer-social-link" href="">
+                <svg class="social" width="16px" height="16px">
+                  <use href="./SVG/icons.svg.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
