--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li class="main-benefits-list">
               <div class="container-icon">
                 <svg class="" width="64px" height="64px">
-                  <use href="./SVG/icons.svg.svg#icon-antenna"></use>
+                  <use href="./images/SVG/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefits-item">Strategy</h3>
@@ -80,7 +80,7 @@
             <li class="main-benefits-list">
               <div class="container-icon">
                 <svg class="" width="64px" height="64px">
-                  <use href="./SVG/icons.svg.svg#icon-clock"></use>
+                  <use href="./images/SVG/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-item">Punctuality</h3>
@@ -92,7 +92,7 @@
             <li class="main-benefits-list">
               <div class="container-icon">
                 <svg class="" width="64px" height="64px">
-                  <use href="./SVG/icons.svg.svg#icon-diagram"></use>
+                  <use href="./images/SVG/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-item">Diligence</h3>
@@ -104,7 +104,7 @@
             <li class="main-benefits-list">
               <div class="container-icon">
                 <svg class="" width="64px" height="64px">
-                  <use href="./SVG/icons.svg.svg#icon-astronaut"></use>
+                  <use href="./images/SVG/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-item">Technologies</h3>
@@ -136,28 +136,32 @@
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-instagram"></use>
+                        <use href="./images/SVG/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-twitter"></use>
+                        <use href="./images/SVG/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-facebook"></use>
+                        <use
+                          href="./images/SVG/icons.svg#icon-facebook
+                        
+                  "
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-linkedin"></use>
+                        <use href="./images/SVG/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -180,28 +184,28 @@
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-instagram"></use>
+                        <use href="./images/SVG/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-twitter"></use>
+                        <use href="./images/SVG/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-facebook"></use>
+                        <use href="./images/SVG/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-linkedin"></use>
+                        <use href="./images/SVG/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -223,28 +227,28 @@
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-instagram"></use>
+                        <use href="./images/SVG/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-twitter"></use>
+                        <use href="./images/SVG/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-facebook"></use>
+                        <use href="./images/SVG/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-linkedin"></use>
+                        <use href="./images/SVG/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -267,28 +271,31 @@
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-instagram"></use>
+                        <use
+                          href="./images/SVG/icons.svg#icon-instagram
+                        "
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-twitter"></use>
+                        <use href="./images/SVG/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-facebook"></use>
+                        <use href="./images/SVG/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./SVG/icons.svg.svg#icon-linkedin"></use>
+                        <use href="./images/SVG/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -439,28 +446,28 @@
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
                 <svg class="social" width="16px" height="16px">
-                  <use href="./SVG/icons.svg.svg#icon-instagram"></use>
+                  <use href="./images/SVG/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
                 <svg class="social" width="16px" height="16px">
-                  <use href="./SVG/icons.svg.svg#icon-twitter"></use>
+                  <use href="./images/SVG/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
                 <svg class="social" width="16px" height="16px">
-                  <use href="./SVG/icons.svg.svg#icon-facebook"></use>
+                  <use href="./images/SVG/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
                 <svg class="social" width="16px" height="16px">
-                  <use href="./SVG/icons.svg.svg#icon-linkedin"></use>
+                  <use href="./images/SVG/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
