--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li class="main-benefits-list">
               <div class="container-icon">
                 <svg class="" width="64px" height="64px">
-                  <use href="./images/SVG/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-item">Diligence</h3>
@@ -104,7 +104,7 @@
             <li class="main-benefits-list">
               <div class="container-icon">
                 <svg class="" width="64px" height="64px">
-                  <use href="./images/SVG/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-item">Technologies</h3>
@@ -136,14 +136,14 @@
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -151,7 +151,7 @@
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
                         <use
-                          href="./images/SVG/icons.svg#icon-facebook
+                          href="./images/icons.svg#icon-facebook
                         
                   "
                         ></use>
@@ -161,7 +161,7 @@
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -184,28 +184,28 @@
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -227,28 +227,28 @@
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -272,7 +272,7 @@
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
                         <use
-                          href="./images/SVG/icons.svg#icon-instagram
+                          href="./images/icons.svg#icon-instagram
                         "
                         ></use>
                       </svg>
@@ -281,21 +281,21 @@
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
                       <svg class="social" width="16px" height="16px">
-                        <use href="./images/SVG/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -446,28 +446,28 @@
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
                 <svg class="social" width="16px" height="16px">
-                  <use href="./images/SVG/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
                 <svg class="social" width="16px" height="16px">
-                  <use href="./images/SVG/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
                 <svg class="social" width="16px" height="16px">
-                  <use href="./images/SVG/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
                 <svg class="social" width="16px" height="16px">
-                  <use href="./images/SVG/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
