--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <ul class="main-benefits">
             <li class="main-benefits-list">
               <div class="container-icon">
-                <svg class="" width="64px" height="64px">
+                <svg class="" width="64" height="64">
                   <use href="./images/SVG/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
