--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </li>
             <li class="main-benefits-list">
               <div class="container-icon">
-                <svg class="" width="64px" height="64px">
+                <svg class="" width="64" height="64">
                   <use href="./images/SVG/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -91,7 +91,7 @@
             </li>
             <li class="main-benefits-list">
               <div class="container-icon">
-                <svg class="" width="64px" height="64px">
+                <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -103,7 +103,7 @@
             </li>
             <li class="main-benefits-list">
               <div class="container-icon">
-                <svg class="" width="64px" height="64px">
+                <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -135,21 +135,21 @@
                 <ul class="social-media">
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-facebook
                         
@@ -160,7 +160,7 @@
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -183,28 +183,28 @@
                 <ul class="social-media">
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -226,28 +226,28 @@
                 <ul class="social-media">
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -270,7 +270,7 @@
                 <ul class="social-media">
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram
                         "
@@ -280,21 +280,21 @@
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icons">
                     <a class="social-link" href="">
-                      <svg class="social" width="16px" height="16px">
+                      <svg class="social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -445,28 +445,28 @@
           <ul class="social-media">
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
-                <svg class="social" width="16px" height="16px">
+                <svg class="social" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
-                <svg class="social" width="16px" height="16px">
+                <svg class="social" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
-                <svg class="social" width="16px" height="16px">
+                <svg class="social" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
-                <svg class="social" width="16px" height="16px">
+                <svg class="social" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
