--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         </div>
         <div class="footer-container-media">
           <p class="footer-social-media">Social media</p>
-          <ul class="social-media">
+          <ul class="social-media-bottom">
             <li class="social-media-icons">
               <a class="footer-social-link" href="">
                 <svg class="social" width="24" height="24">
