--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li class="main-benefits-list">
               <div class="container-icon">
                 <svg class="" width="64" height="64">
-                  <use href="./images/SVG/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefits-item">Strategy</h3>
@@ -80,7 +80,7 @@
             <li class="main-benefits-list">
               <div class="container-icon">
                 <svg class="" width="64" height="64">
-                  <use href="./images/SVG/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-item">Punctuality</h3>
